2011-05-02  Anders Carlsson  <andersca@apple.com>

        Reviewed by Oliver Hunt.

        Dispatch the PluginProcessCrashed on the connection work queue
        https://bugs.webkit.org/show_bug.cgi?id=59996

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::initialize):
        Add the web process as a queue client.

        (WebKit::WebProcess::terminate):
        Remove the web process as a queue client.

        (WebKit::WebProcess::willProcessMessageOnClientRunLoop):
        Try calling willProcessWebProcessMessageOnClientRunLoop.

        * WebProcess/WebProcess.messages.in:
        Add the DispatchOnConnectionQueue attribute to PluginProcessCrashed.

2011-05-02  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Send a PluginProcessCrashed message to all web processes when a plug-in crashes
        https://bugs.webkit.org/show_bug.cgi?id=59994

        * UIProcess/Plugins/PluginProcessProxy.cpp:
        (WebKit::PluginProcessProxy::didClose):
        Iterate over all contexts and send PluginProcessCrashed to all web processes in each context.

        (WebKit::PluginProcessProxy::didFinishLaunching):
        Call setShouldCloseConnectionOnMachExceptions on the CoreIPC connection.

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::pluginProcessCrashed):
        Add empty stub.

        * WebProcess/WebProcess.messages.in:
        Add message.

2011-05-02  Anders Carlsson  <andersca@apple.com>

        Reviewed by Simon Fraser.

        Plug-in not completely repainted after a crash
        https://bugs.webkit.org/show_bug.cgi?id=59991

        Call Widget::invalidate().

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::pluginProcessCrashed):

2011-05-02  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        Make PluginProcessConnectionManager a member of WebProcess
        https://bugs.webkit.org/show_bug.cgi?id=59989
